# ixoyeconnect

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
apps/agenda/: filter.py  forms.py  models.py  urls.py  views.py
apps/agenda/migrations/: 0001_initial.py  0002_initial.py
apps/agenda/templates/agenda/: agenda_create_view.html  agenda_list_view.html
apps/agenda/templates/partials/: custom_icone_select.html
apps/contribuicao/: apps.py  filter.py  filters.py  forms.py  models.py  urls.py  views.py
apps/contribuicao/migrations/: 0001_initial.py  0002_initial.py
apps/core/: filters.py  forms.py  messages_utils.py  models.py  signals.py  tasks.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py
apps/core/static/: manifest.json  serviceworker.js
apps/core/static/css/: dashboard.css  main.css  (+2 more)
apps/devocional/: apps.py
apps/escala/: filter.py  forms.py  models.py  urls.py  views.py
apps/escala/migrations/: 0001_initial.py  0002_initial.py
apps/evento/: filter.py  filters.py  forms.py  models.py  urls.py  views.py
apps/evento/migrations/: 0001_initial.py  0002_initial.py
apps/instituicao/: forms.py  models.py
apps/instituicao/migrations/: 0001_initial.py
apps/membro/: forms.py  models.py
apps/membro/migrations/: 0001_initial.py
apps/notificacao/: filter.py  filters.py  forms.py  models.py  urls.py  views.py
apps/notificacao/migrations/: 0001_initial.py  0002_initial.py
apps/posts/: filter.py  filters.py  forms.py  models.py  urls.py  views.py
apps/posts/migrations/: 0001_initial.py  0002_initial.py
apps/relatorios/: filter.py  filters.py  forms.py  models.py  urls.py  views.py
apps/relatorios/migrations/: 0001_initial.py  0002_initial.py
apps/usuario/: filter.py  forms.py  models.py  urls.py  views.py
apps/usuario/migrations/: 0001_initial.py
apps/usuario/views/: views.py  views_instituicao.py  views_membro.py
ixoyeconnect/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
locale/pt_BR/LC_MESSAGES/: djangojs.mo  djangojs.po
templates/account/: base.html  desvinculado.html  login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  signup.html
templates/layouts/: base.html
(+90 files in other folders)
