[tool.poetry]
name = "ixoyeconnect"
version = "0.1.0"
description = ""
authors = ["noemimedeiros <noemimedeiros.acc@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.10"
django-ckeditor-5 = "^0.2.13"
mysqlclient = "^2.2.4"
pillow = "^10.4.0"
django-extra-views = "^0.14.0"
django-filter = "^24.3"
cryptography = "^43.0.1"
django-pwa-webpush = "^1.1.3"
charset-normalizer = "^3.4.0"
python-dateutil = "^2.9.0.post0"
celery = {extras = ["redis"], version = "^5.4.0"}
django-environ = "^0.11.2"
django-allauth = "^65.1.0"
jwt = "^1.3.1"
async-timeout = "^5.0.0"
redis = "^5.2.0"
billiard = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
