[tool.poetry]
name = "ixoyeconnect"
version = "0.1.0"
description = ""
authors = ["noemimedeiros <noemimedeiros.acc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
mysqlclient = "^2.2.5"
jwt = "^1.3.1"
django-webpush = "^0.3.6"
django-pwa = "^2.0.1"
crispy-bootstrap5 = "^2024.10"
django-extra-views = "^0.15.0"
django-allauth = {extras = ["socialaccount"], version = "^65.2.0"}
django-filter = "^24.3"
django-environ = "^0.11.2"
python-dateutil = "^2.9.0.post0"
pillow = "^11.0.0"
django-ckeditor-5 = "^0.2.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
